<?xml version="1.0"?>
<package format="2">
  <name>object_instance_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages used for a lidar object instance</description>

  <maintainer email="andreas.reich@unibw.de">Andreas Reich</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
